--- a/impressum/index.html
+++ b/impressum/index.html
@@ -22,10 +22,21 @@
   <main class="wrap">
     <section class="hero">
       <h1>Impressum</h1>
-      <p>Platzhalter – bitte ausfüllen.</p>
+      <p>Angaben gemäß § 5 DDG</p>
+
       <div class="card" style="margin-top:14px">
-        <p><strong>Name</strong><br/>Straße Hausnr.<br/>PLZ Ort<br/>Deutschland</p>
-        <p style="margin-top:10px"><strong>Kontakt</strong><br/>kontakt@weier.digital</p>
+        <p><strong>Anbieter</strong><br/>
+          Carsten Weier<br/>
+          Birkenweg 16<br/>
+          57234 Wilnsdorf<br/>
+          Deutschland
+        </p>
+
+        <p style="margin-top:10px"><strong>Kontakt</strong><br/>
+          E-Mail: <a href="mailto:c@weier.digital">c@weier.digital</a><br/>
+          <!-- Optional, empfohlen: Telefon oder ein Kontaktformular -->
+          <!-- Telefon: +49 … -->
+        </p>
       </div>
     </section>
   </main>
@@ -36,6 +47,7 @@
       <small><a href="/impressum/">Impressum</a> · <a href="/datenschutz/">Datenschutz</a></small>
     </div>
   </footer>
+
   <script>document.getElementById("y").textContent=new Date().getFullYear();</script>
 </body>
 </html>
