--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -23,9 +23,17 @@
     <section class="hero">
       <h1>Kontakt</h1>
       <p>Kurze Mail reicht.</p>
+
       <div class="cta">
-        <a class="btn primary" href="mailto:kontakt@weier.digital?subject=Anfrage%20ERP%2FSQL&body=Hi%2C%20kurz%20das%20Thema%3A%20...">kontakt@weier.digital</a>
+        <a class="btn primary"
+           href="mailto:c@weier.digital?subject=Anfrage%20ERP%2FSQL&body=Hi%20Carsten%2C%0A%0Akurz%20das%20Thema%3A%20...%0A%0AERP%3A%20...%0ADB%3A%20...%0ASymptom%3A%20...%0AZiel%20in%2030%20Tagen%3A%20...%0A%0AViele%20Gr%C3%BC%C3%9Fe">
+          c@weier.digital
+        </a>
       </div>
+
+      <p style="margin-top:12px">
+        Optional: ERP, Datenbank und 1–2 Symptome (z.B. „Report X langsam“, „Stammdaten-Dubletten“).
+      </p>
     </section>
   </main>
 
