--- a/leistungen/index.html
+++ b/leistungen/index.html
@@ -39,6 +39,13 @@
         <p>Checks & Regeln (Stammdaten, Dubletten, Pflichtfelder).</p>
       </div>
     </section>
+
+    <section class="hero" style="padding-top:0">
+      <p>Unverbindlich anfragen.</p>
+      <div class="cta">
+        <a class="btn primary" href="/kontakt/">Kontakt</a>
+      </div>
+    </section>
   </main>
 
   <footer class="footer">
