--- a/index.html
+++ b/index.html
@@ -24,10 +24,14 @@
     <section class="hero">
       <h1>ERP + SQL. Ohne Umwege.</h1>
       <p>Reports schneller. Daten sauberer. Automatisierung mit Python.</p>
+
       <div class="cta">
         <a class="btn primary" href="/kontakt/">Kontakt</a>
         <a class="btn" href="/leistungen/">Pakete</a>
+        <a class="btn" href="mailto:c@weier.digital?subject=Anfrage%20ERP%2FSQL&body=Hi%20Carsten%2C%0A%0Akurz%20das%20Thema%3A%20...%0A%0AERP%3A%20...%0ADB%3A%20...%0ASymptom%3A%20...%0AZiel%20in%2030%20Tagen%3A%20...%0A%0AViele%20Gr%C3%BC%C3%9Fe">c@weier.digital</a>
       </div>
+
+      <p style="margin-top:12px">Schreib mir ERP + DB + 1–2 Symptome.</p>
     </section>
 
     <section class="grid">
@@ -59,4 +63,3 @@
   <script>document.getElementById("y").textContent=new Date().getFullYear();</script>
 </body>
 </html>
-
