--- a/datenschutz/index.html
+++ b/datenschutz/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Impressum – weier.digital</title>
-  <meta name="description" content="Impressum." />
+  <title>Datenschutz – weier.digital</title>
+  <meta name="description" content="Datenschutzhinweise." />
   <link rel="stylesheet" href="/assets/style.css" />
 </head>
 <body>
@@ -42,21 +42,18 @@
 <main class="container">
 
 <section class="hero">
-  <span class="kicker"><span class="dot"></span> Angaben gemäß § 5 DDG</span>
-  <h1>Impressum</h1>
-  <p class="lead">Kontakt & Verantwortlicher.</p>
+  <span class="kicker"><span class="dot"></span> Kurz & pragmatisch</span>
+  <h1>Datenschutz</h1>
+  <p class="lead">Diese Seite ist statisch und nutzt kein Tracking (solange nichts Zusätzliches eingebaut wird).</p>
 
   <div class="panel" style="margin-top:16px">
-    <h2>Anbieter</h2>
-    <p>
-      Carsten Weier<br/>
-      Birkenweg 16<br/>
-      57234 Wilnsdorf<br/>
-      Deutschland
-    </p>
-    <hr/>
-    <h2>Kontakt</h2>
-    <p>E-Mail: <a href="mailto:c@weier.digital">c@weier.digital</a></p>
+    <h2>Was passiert hier?</h2>
+    <ul>
+      <li>Keine Analyse‑Tools, keine Werbe‑Tracker, keine Newsletter‑Formulare.</li>
+      <li>Kontakt erfolgt per E‑Mail (wenn du klickst).</li>
+      <li>Hosting über GitHub Pages – dabei können serverseitige Zugriffsdaten in Logs anfallen.</li>
+    </ul>
+    <p class="note">Wenn später externe Dienste hinzukommen, wird diese Seite aktualisiert.</p>
   </div>
 </section>
 
