--- a/leistungen/index.html
+++ b/leistungen/index.html
@@ -4,56 +4,85 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Leistungen – weier.digital</title>
+  <meta name="description" content="Pakete für Prozess-Verbesserung, Automatisierung und Datenqualität." />
   <link rel="stylesheet" href="/assets/style.css" />
 </head>
 <body>
-  <header class="topbar">
-    <div class="wrap">
-      <a class="brand" href="/">weier.digital</a>
-      <nav class="nav">
-        <a href="/">Start</a>
-        <a class="active" href="/leistungen/">Leistungen</a>
-        <a href="/about/">Über</a>
-        <a href="/kontakt/">Kontakt</a>
-      </nav>
+
+<header class="topbar">
+  <div class="container navrow">
+    <a class="brand" href="/">
+      <span class="mark" aria-hidden="true"></span>
+      <span>weier.digital</span>
+    </a>
+
+    <nav class="menu" aria-label="Navigation">
+      <a class="" href="/">Start</a>
+      <a class="active" href="/leistungen/">Leistungen</a>
+      <a class="" href="/about/">Über</a>
+      <a class="" href="/kontakt/">Kontakt</a>
+    </nav>
+
+    <div class="actions">
+      <button class="btn iconbtn" id="themeToggle" type="button" aria-label="Theme">
+        <svg class="icon" data-ic="moon" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+          <path d="M21 13.3A8.3 8.3 0 0 1 10.7 3a7.5 7.5 0 1 0 10.3 10.3Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+        <svg class="icon" data-ic="sun" viewBox="0 0 24 24" fill="none" aria-hidden="true" style="display:none">
+          <path d="M12 18a6 6 0 1 0 0-12 6 6 0 0 0 0 12Z" stroke="currentColor" stroke-width="2"/>
+          <path d="M12 2v2M12 20v2M4.93 4.93l1.41 1.41M17.66 17.66l1.41 1.41M2 12h2M20 12h2M4.93 19.07l1.41-1.41M17.66 6.34l1.41-1.41"
+                stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+        </svg>
+      </button>
+      <a class="btn primary" href="/kontakt/">Anfragen</a>
     </div>
-  </header>
+  </div>
+</header>
 
-  <main class="wrap">
-    <section class="hero">
-      <h1>Leistungen</h1>
-      <p>Einfach, klar, messbar.</p>
-    </section>
+<main class="container">
 
-    <section class="grid">
-      <div class="card">
-        <h2>Healthcheck</h2>
-        <p>Top-Queries, Quickwins, Prioritätenliste.</p>
-      </div>
-      <div class="card">
-        <h2>Reporting-Paket</h2>
-        <p>Standard-Reports als Views/Exports + Doku.</p>
-      </div>
-      <div class="card">
-        <h2>Datenqualität</h2>
-        <p>Checks & Regeln (Stammdaten, Dubletten, Pflichtfelder).</p>
-      </div>
-    </section>
+<section class="hero">
+  <span class="kicker"><span class="dot"></span> Klarer Umfang, klare Ergebnisse</span>
+  <h1>Leistungen</h1>
+  <p class="lead">Neutral formulierte Pakete, die sich gut „nebenbei“ starten lassen – ohne große Bindung.</p>
+</section>
 
-    <section class="hero" style="padding-top:0">
-      <p>Unverbindlich anfragen.</p>
-      <div class="cta">
-        <a class="btn primary" href="/kontakt/">Kontakt</a>
-      </div>
-    </section>
-  </main>
+<section class="grid">
+  <article class="card">
+    <span class="pill">Paket</span>
+    <h3>Prozess‑Check</h3>
+    <p>Kurzer Blick auf einen Ablauf. Ergebnis: 3–5 konkrete Verbesserungen + Umsetzungsplan.</p>
+  </article>
+  <article class="card">
+    <span class="pill">Paket</span>
+    <h3>Automations‑Baustein</h3>
+    <p>Ein wiederkehrender Schritt wird automatisiert (Export, Abgleich, Report‑Job, Validierung).</p>
+  </article>
+  <article class="card">
+    <span class="pill">Paket</span>
+    <h3>Daten‑Healthcheck</h3>
+    <p>Checks für Stammdaten/Transaktionen: Dubletten, Pflichtfelder, Plausibilität, Qualitätstrends.</p>
+  </article>
+</section>
 
-  <footer class="footer">
-    <div class="wrap foot">
-      <small>© <span id="y"></span> weier.digital</small>
-      <small><a href="/impressum/">Impressum</a> · <a href="/datenschutz/">Datenschutz</a></small>
-    </div>
-  </footer>
-  <script>document.getElementById("y").textContent=new Date().getFullYear();</script>
+<section class="panel" style="margin-top:16px">
+  <h2>Wichtig</h2>
+  <p>Die Seite ist im Aufbau. Inhalte sind bewusst allgemein gehalten. Wenn du ein Thema hast, schreib kurz.</p>
+  <div style="margin-top:14px; display:flex; gap:10px; flex-wrap:wrap;">
+    <a class="btn primary" href="/kontakt/">Kontakt</a>
+    <a class="btn" href="/about/">Mehr dazu</a>
+  </div>
+</section>
+
+</main>
+
+<footer class="footer">
+  <div class="container footrow">
+    <small>© <span id="y"></span> weier.digital · im Aufbau</small>
+    <small><a href="/impressum/">Impressum</a> · <a href="/datenschutz/">Datenschutz</a></small>
+  </div>
+</footer>
+<script src="/assets/main.js"></script>
+
 </body>
 </html>
