--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <div style="margin-top:18px; display:flex; gap:10px; flex-wrap:wrap; align-items:center;">
     <a class="btn primary" href="/kontakt/">Unverbindlich anfragen</a>
     <a class="btn" href="/leistungen/">Was ich mache</a>
-    <span class="pill">ERP · SQL · Engineering (Randnotiz)</span>
+    <span class="pill">ERP · SQL · Engineering </span>
   </div>
   <p class="note">
     Hinweis: Die Seite ist im Aufbau. Aktuell nur Orientierung & Kontakt – ohne aktives Angebot oder öffentliche Referenzen.
