--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>weier.digital</title>
-  <meta name="description" content="Prozesse, Automatisierung, Datenqualität – neutral und pragmatisch." />
+  <meta name="description" content="Carsten Weier – Prozesse, Automatisierung, Datenqualität" />
   <link rel="stylesheet" href="/assets/style.css" />
 </head>
 <body>
@@ -18,96 +18,60 @@
 
     <nav class="menu" aria-label="Navigation">
       <a class="active" href="/">Start</a>
-      <a class="" href="/leistungen/">Leistungen</a>
-      <a class="" href="/about/">Über</a>
-      <a class="" href="/kontakt/">Kontakt</a>
+      <a href="/about/">Über</a>
+      <a href="/blog/">Blog</a>
+      <a href="/kontakt/">Kontakt</a>
     </nav>
 
-    <div class="actions">
-      <button class="btn iconbtn" id="themeToggle" type="button" aria-label="Theme">
-        <svg class="icon" data-ic="moon" viewBox="0 0 24 24" fill="none" aria-hidden="true">
-          <path d="M21 13.3A8.3 8.3 0 0 1 10.7 3a7.5 7.5 0 1 0 10.3 10.3Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-        </svg>
-        <svg class="icon" data-ic="sun" viewBox="0 0 24 24" fill="none" aria-hidden="true" style="display:none">
-          <path d="M12 18a6 6 0 1 0 0-12 6 6 0 0 0 0 12Z" stroke="currentColor" stroke-width="2"/>
-          <path d="M12 2v2M12 20v2M4.93 4.93l1.41 1.41M17.66 17.66l1.41 1.41M2 12h2M20 12h2M4.93 19.07l1.41-1.41M17.66 6.34l1.41-1.41"
-                stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-        </svg>
-      </button>
-      <a class="btn primary" href="/kontakt/">Anfragen</a>
-    </div>
+    <button class="btn iconbtn" id="themeToggle" type="button" aria-label="Theme wechseln">
+      <svg class="icon" data-ic="moon" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+        <path d="M21 13.3A8.3 8.3 0 0 1 10.7 3a7.5 7.5 0 1 0 10.3 10.3Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+      </svg>
+      <svg class="icon" data-ic="sun" viewBox="0 0 24 24" fill="none" aria-hidden="true" style="display:none">
+        <path d="M12 18a6 6 0 1 0 0-12 6 6 0 0 0 0 12Z" stroke="currentColor" stroke-width="2"/>
+        <path d="M12 2v2M12 20v2M4.93 4.93l1.41 1.41M17.66 17.66l1.41 1.41M2 12h2M20 12h2M4.93 19.07l1.41-1.41M17.66 6.34l1.41-1.41"
+              stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+      </svg>
+    </button>
   </div>
 </header>
 
 <main class="container">
 
 <section class="hero">
-  <span class="kicker"><span class="dot"></span> Prozesse · Automatisierung · Datenqualität</span>
-  <h1>Bessere Abläufe. Weniger Reibung.</h1>
+  <h1>Carsten Weier</h1>
   <p class="lead">
-    Ich baue schlanke Automatisierungen und kleine Verbesserungen rund um bestehende Systeme – damit Daten stimmen
-    und Prozesse stabil laufen. Keine großen Projekte, sondern pragmatische Schritte.
-  </p>
-  <div style="margin-top:18px; display:flex; gap:10px; flex-wrap:wrap; align-items:center;">
-    <a class="btn primary" href="/kontakt/">Unverbindlich anfragen</a>
-    <a class="btn" href="/leistungen/">Was ich mache</a>
-    <span class="pill">ERP · SQL · Engineering </span>
-  </div>
-  <p class="note">
-    Hinweis: Die Seite ist im Aufbau. Aktuell nur Orientierung & Kontakt – ohne aktives Angebot oder öffentliche Referenzen.
+    Prozesse, Automatisierung & Datenqualität im Engineering-Umfeld
   </p>
 </section>
 
-<section class="grid" aria-label="Schwerpunkte">
+<section class="grid">
   <article class="card">
-    <span class="pill">01</span>
-    <h3>Prozess‑Entlastung</h3>
-    <p>Weniger manuelle Schritte, weniger „nachpflegen“, weniger Excel‑Schattenprozesse.</p>
+    <h3>Prozess-Automatisierung</h3>
+    <p>Wiederkehrende Abläufe automatisieren und Reibungspunkte beseitigen</p>
   </article>
   <article class="card">
-    <span class="pill">02</span>
-    <h3>Automatisierung</h3>
-    <p>Kleine Tools & Scripts, die wiederkehrende Arbeit zuverlässig übernehmen.</p>
+    <h3>Datenqualität</h3>
+    <p>Stammdaten pflegen, Plausibilitäten prüfen und Dubletten vermeiden</p>
   </article>
   <article class="card">
-    <span class="pill">03</span>
-    <h3>Daten sauber halten</h3>
-    <p>Plausibilitäten, Dubletten‑Checks, Regeln – damit Zahlen und Stammdaten stimmen.</p>
+    <h3>Engineering-Prozesse</h3>
+    <p>Tools und Workflows im ERP- und CAD-Umfeld verbessern</p>
   </article>
-</section>
-
-<section class="split" aria-label="Wie ich arbeite">
-  <div class="panel">
-    <h2>Wie ich arbeite</h2>
-    <p>Kurz klären, was weh tut. Dann ein kleines Paket mit klarer Wirkung bauen und dokumentieren.</p>
-    <ul>
-      <li>Ist‑Aufnahme (30–60 Min, fokussiert)</li>
-      <li>Quickwins priorisieren</li>
-      <li>Umsetzung in kleinen Schritten</li>
-      <li>Dokumentation + Übergabe</li>
-    </ul>
-  </div>
-  <div class="panel">
-    <h2>Technik (Randnotiz)</h2>
-    <p>Meist in vorhandenen Landschaften: Datenbanken, ERP‑Umfeld, Engineering‑Tools.</p>
-    <ul>
-      <li>ERP / Datenmodelle</li>
-      <li>SQL / Reporting / Checks</li>
-      <li>Python‑Automationen</li>
-      <li>Engineering‑Kontext (z.B. Inventor)</li>
-    </ul>
-  </div>
 </section>
 
 </main>
 
 <footer class="footer">
   <div class="container footrow">
-    <small>© <span id="y"></span> weier.digital · im Aufbau</small>
-    <small><a href="/impressum/">Impressum</a> · <a href="/datenschutz/">Datenschutz</a></small>
+    <small>© <span id="y"></span> Carsten Weier</small>
+    <small>
+      <a href="/impressum/">Impressum</a> · 
+      <a href="/datenschutz/">Datenschutz</a>
+    </small>
   </div>
 </footer>
-<script src="/assets/main.js"></script>
 
+<script src="/assets/main.js"></script>
 </body>
 </html>
