--- a/datenschutz/index.html
+++ b/datenschutz/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Datenschutz – weier.digital</title>
-  <meta name="description" content="Datenschutzhinweise." />
+  <meta name="description" content="Datenschutzerklärung" />
   <link rel="stylesheet" href="/assets/style.css" />
 </head>
 <body>
@@ -17,43 +17,90 @@
     </a>
 
     <nav class="menu" aria-label="Navigation">
-      <a class="" href="/">Start</a>
-      <a class="" href="/leistungen/">Leistungen</a>
-      <a class="" href="/about/">Über</a>
-      <a class="" href="/kontakt/">Kontakt</a>
+      <a href="/">Start</a>
+      <a href="/about/">Über</a>
+      <a href="/blog/">Blog</a>
+      <a href="/kontakt/">Kontakt</a>
     </nav>
 
-    <div class="actions">
-      <button class="btn iconbtn" id="themeToggle" type="button" aria-label="Theme">
-        <svg class="icon" data-ic="moon" viewBox="0 0 24 24" fill="none" aria-hidden="true">
-          <path d="M21 13.3A8.3 8.3 0 0 1 10.7 3a7.5 7.5 0 1 0 10.3 10.3Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-        </svg>
-        <svg class="icon" data-ic="sun" viewBox="0 0 24 24" fill="none" aria-hidden="true" style="display:none">
-          <path d="M12 18a6 6 0 1 0 0-12 6 6 0 0 0 0 12Z" stroke="currentColor" stroke-width="2"/>
-          <path d="M12 2v2M12 20v2M4.93 4.93l1.41 1.41M17.66 17.66l1.41 1.41M2 12h2M20 12h2M4.93 19.07l1.41-1.41M17.66 6.34l1.41-1.41"
-                stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-        </svg>
-      </button>
-      <a class="btn primary" href="/kontakt/">Anfragen</a>
-    </div>
+    <button class="btn iconbtn" id="themeToggle" type="button" aria-label="Theme wechseln">
+      <svg class="icon" data-ic="moon" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+        <path d="M21 13.3A8.3 8.3 0 0 1 10.7 3a7.5 7.5 0 1 0 10.3 10.3Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+      </svg>
+      <svg class="icon" data-ic="sun" viewBox="0 0 24 24" fill="none" aria-hidden="true" style="display:none">
+        <path d="M12 18a6 6 0 1 0 0-12 6 6 0 0 0 0 12Z" stroke="currentColor" stroke-width="2"/>
+        <path d="M12 2v2M12 20v2M4.93 4.93l1.41 1.41M17.66 17.66l1.41 1.41M2 12h2M20 12h2M4.93 19.07l1.41-1.41M17.66 6.34l1.41-1.41"
+              stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+      </svg>
+    </button>
   </div>
 </header>
 
 <main class="container">
 
-<section class="hero">
-  <span class="kicker"><span class="dot"></span> Kurz & pragmatisch</span>
+<section class="page-header">
   <h1>Datenschutz</h1>
-  <p class="lead">Diese Seite ist statisch und nutzt kein Tracking (solange nichts Zusätzliches eingebaut wird).</p>
+  <p class="lead">Informationen zur Datenverarbeitung</p>
+</section>
 
-  <div class="panel" style="margin-top:16px">
-    <h2>Was passiert hier?</h2>
+<section class="about-content">
+  <div class="about-section">
+    <h2>1. Verantwortlicher</h2>
+    <p>
+      Carsten Weier<br>
+      Birkenweg 16<br>
+      57234 Wilnsdorf<br>
+      E-Mail: c@weier.digital
+    </p>
+  </div>
+
+  <div class="about-section">
+    <h2>2. Allgemeines</h2>
+    <p>
+      Diese Website verarbeitet personenbezogene Daten nur im technisch notwendigen Umfang. 
+      Es werden keine Tracking-Tools, Cookies oder Analysedienste eingesetzt.
+    </p>
+  </div>
+
+  <div class="about-section">
+    <h2>3. Server-Log-Dateien</h2>
+    <p>
+      Beim Aufruf dieser Website werden automatisch Informationen in Server-Log-Dateien gespeichert:
+    </p>
     <ul>
-      <li>Keine Analyse‑Tools, keine Werbe‑Tracker, keine Newsletter‑Formulare.</li>
-      <li>Kontakt erfolgt per E‑Mail (wenn du klickst).</li>
-      <li>Hosting über GitHub Pages – dabei können serverseitige Zugriffsdaten in Logs anfallen.</li>
+      <li>IP-Adresse</li>
+      <li>Datum und Uhrzeit der Anfrage</li>
+      <li>Browsertyp und -version</li>
+      <li>Betriebssystem</li>
     </ul>
-    <p class="note">Wenn später externe Dienste hinzukommen, wird diese Seite aktualisiert.</p>
+    <p>
+      Diese Daten werden ausschließlich zur Sicherstellung des technischen Betriebs und zur 
+      Fehleranalyse verwendet. Eine Zusammenführung mit anderen Datenquellen erfolgt nicht.
+    </p>
+  </div>
+
+  <div class="about-section">
+    <h2>4. Kontaktaufnahme</h2>
+    <p>
+      Bei Kontaktaufnahme per E-Mail werden die übermittelten Daten ausschließlich zur Bearbeitung 
+      der Anfrage verwendet und nicht an Dritte weitergegeben.
+    </p>
+  </div>
+
+  <div class="about-section">
+    <h2>5. Ihre Rechte</h2>
+    <p>Sie haben jederzeit das Recht auf:</p>
+    <ul>
+      <li>Auskunft über gespeicherte Daten</li>
+      <li>Berichtigung unrichtiger Daten</li>
+      <li>Löschung Ihrer Daten</li>
+      <li>Einschränkung der Verarbeitung</li>
+      <li>Widerspruch gegen die Verarbeitung</li>
+      <li>Datenübertragbarkeit</li>
+    </ul>
+    <p>
+      Wenden Sie sich dazu bitte an: c@weier.digital
+    </p>
   </div>
 </section>
 
@@ -61,11 +108,14 @@
 
 <footer class="footer">
   <div class="container footrow">
-    <small>© <span id="y"></span> weier.digital · im Aufbau</small>
-    <small><a href="/impressum/">Impressum</a> · <a href="/datenschutz/">Datenschutz</a></small>
+    <small>© <span id="y"></span> Carsten Weier</small>
+    <small>
+      <a href="/impressum/">Impressum</a> · 
+      <a href="/datenschutz/">Datenschutz</a>
+    </small>
   </div>
 </footer>
-<script src="/assets/main.js"></script>
 
+<script src="/assets/main.js"></script>
 </body>
 </html>
